--- a/style.css
+++ b/style.css
@@ -217,11 +217,11 @@ select > option {
   cursor: pointer;
 }
 
-.video-fullscreen {
+/* .video-fullscreen {
   position: relative;
   top: 50%;
   transform: translateY(-50%);
-}
+} */
 
 /* Media Query: Large Smartphone (Vertical) */
 @media screen and (max-width: 600px) {
@@ -230,7 +230,7 @@ select > option {
     max-width: 95vw;
   }
 
-  .fas {
+  .fa-solid {
     font-size: 20px;
   }
 
@@ -286,8 +286,8 @@ select > option {
     object-fit: cover;
   }
 
-  .video-fullscreen {
+  /* .video-fullscreen {
     height: 97.5vh;
     border-radius: 0;
-  }
+  } */
 }
